Cambios realizados para mejorar la implementación del adaptador usado en la vista tipo lista de los lugares

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">pAppseando</string>
     <string name="Name_Registration">Nombres y Apellidos</string>
     <string name="EmailAddress">Correo Electrónico</string>
-    <string name="Password">Password</string>
-    <string name="Confirm_Password">Confirm_Password</string>
+    <string name="Password">Contraseña</string>
+    <string name="Confirm_Password">Confirmar Contraseña</string>
+    <string name="default_place_description">Descripción del lugar</string>
+    <string name="default_place_name">Nombre del lugar</string>
 </resources>
