Inserción del acticity de mapas y conexión de la navegación con los otros activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="Confirm_Password">Confirmar Contraseña</string>
     <string name="default_place_description">Descripción del lugar</string>
     <string name="default_place_name">Nombre del lugar</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="descripition">Descripición de, boton flotante</string>
+    <string name="title_activity_maps_activity2borr_r">MapsActivity2borrR</string>
+    <string name="title_activity_maps_activity2borrarr">MapsActivity2borrarr</string>
 </resources>
