--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="descripition">Descripición de, boton flotante</string>
     <string name="title_activity_maps_activity2borr_r">MapsActivity2borrR</string>
     <string name="title_activity_maps_activity2borrarr">MapsActivity2borrarr</string>
+    <string name="TextoEditText">¿No tienes cuenta? <u>Regístrate</u>.</string>
+    <string name="TxtView_Password_Recovery"> <u>¿Olvidaste tu contraseña?</u>.</string>
+
 </resources>
